用于回滚：删除了脚手架和语言文件；删除了代码生成
- 目前所有的数据文件均由 JSON 驱动